<resources>
    <string name="app_name">Liemie</string>
    <string name="action_profil">Profil</string>
    <string name="action_liste_rdv">My appointments</string>
    <string name="action_settings">Settings</string>
    <string name="action_connexion">Login</string>
    <string name="action_import">Import data</string>
    <string name="action_export">Export data</string>

    <string name="general_ok">ok</string>
    <string name="general_cancel">cancel</string>
    <string name="general_error">Error</string>
    <string name="general_warning">Warning</string>
    <string name="general_return">Back</string>

    <string name="login_title">Login</string>
    <string name="login_mail">Mail</string>
    <string name="login_password">Password</string>
    <string name="login_connect">Login</string>
    <string name="login_cancel">Cancel</string>
    <string name="login_entryError">Entries are not valid</string>
    <string name="login_connexionError">Server or connection is unavailable</string>
    <string name="login_offlineConnexion">Connection is offline</string>
    <string name="login_autoConnexion">Auto Connection is on</string>
    <string name="login_jsonError">JSON error</string>
    <string name="login_disconnect">Disconnect</string>
    <string name="login_disconnectMessage">Do you really want to disconnect ?</string>

    <string name="profil_title">Profile</string>
    <string name="profil_idText">Login</string>
    <string name="profil_mdp">Password</string>

    <string name="settings_title">Settings</string>
    <string name="settings_autoConnexionOption">Clear user informations for auto connection</string>
    <string name="settings_removeSharedPref">Remove user informations</string>
    <string name="settings_removeWarning">The deletion of this information is irreversible</string>
    <string name="settings_darkTheme">Dark theme</string>
    <string name="settings_removeCookie">Remove Cookie on local</string>
    <string name="settings_cookieButton">Remove cookie</string>

    <string name="visite_title">Visit</string>
    <string name="visite_patientName">Patient\'s name</string>
    <string name="visite_patientAge">Patient\'s age</string>
    <string name="visite_patientAdress">Patient\'s address</string>
    <string name="visite_tel">Call</string>
    <string name="visite_openGmaps">Go to</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
