<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.liemie.MainActivity">
    <item
        android:id="@+id/action_profil"
        android:icon="@drawable/info"
        android:orderInCategory="100"
        android:title="@string/action_profil"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_liste_rdv"
        android:icon="@drawable/list"
        android:orderInCategory="100"
        android:title="@string/action_liste_rdv"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_connexion"
        android:icon="@drawable/connec"
        android:orderInCategory="100"
        android:title="@string/action_connexion"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_import"
        android:icon="@drawable/importer"
        android:orderInCategory="100"
        android:title="@string/action_import"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/export"
        android:orderInCategory="100"
        android:title="@string/action_export"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
</menu>
